--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.4.3",
     "vue": "^3.2.25"
   },
   "devDependencies": {
