--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "echarts": "^5.4.3",
     "vue": "^3.2.25"
